# rnnoise

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  dr_mp3.h  dr_wav.h  rnnoise_demo.c
include/: rnnoise.h
src/: compile.sh  denoise.c  pitch.c  stb_fft.h
training/: dump_rnn.py
